@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2012-06-06"
+#define RUBY_RELEASE_DATE "2012-06-07"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20120606
-#define RUBY_PATCHLEVEL 366
+#define RUBY_RELEASE_CODE 20120607
+#define RUBY_PATCHLEVEL 367
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2012
 #define RUBY_RELEASE_MONTH 6
-#define RUBY_RELEASE_DAY 6
+#define RUBY_RELEASE_DAY 7
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
